2009-06-04  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-session-camel.c (on_account_connect_done):
	Notify observers when a connection fails due to disk full conditions

2009-06-02  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c
	(tny_camel_store_account_get_folders_default): unref the right
	instance of CamelStore

2009-05-22  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c 
	(tny_camel_mime_part_get_parts_default): don't revert the order 
	of the mime parts in get_parts.

2009-05-22  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel/providers/imap/camel-imap-store.c
	(get_folders_sync_ns_only_lsub): handle the case of
	parse_list_response_as_folder_info returning NULL

2009-05-21  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_poke_status_default): don't set the poke_status
	operation as auto-cancellable

	* libtinymail-camel/tny-camel-send-queue.c (check_cancel): don't
	cancel always after sending the first email of the send queue. It
	was the consequence of a typo

2009-05-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: reason/unreason the
	destination folder on copy_async, to avoid freeing the summary
	and then crashing on subsequent access.

2009-05-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c
	(tny_camel_send_queue_cancel_default): Use an asynchronous call
	when canceling sendings in order not to cause deadlocks

2009-05-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c
	(tny_camel_send_queue_cancel_default): use sync_sync to refresh
	the outbox instead of the deprecated and dangerous tny_folder_sync
	because the later could cause summary corruptions when combined
	with asynchronous calls

	* libtinymailui-gtk/tny-gtk-folder-list-store.c